RESOLVED FIXED111032
[BlackBerry] User credentials are not correctly handled for non-browser usage
https://bugs.webkit.org/show_bug.cgi?id=111032
Summary [BlackBerry] User credentials are not correctly handled for non-browser usage
Lyon Chen
Reported 2013-02-27 20:21:57 PST
In BlackBerry, some applications have no access to BlackBerry CertMgr, these application will save user credentials into their own database using SQLiteStatement. But SQLiteStatement::bindBlob cannot handle the encrypted password as a normal WTF::String correctly. We need to use the encrypted password as 8bit string when calling bSQLiteStatement::indBlob().
Attachments
patch for 111032. (2.92 KB, patch)
2013-02-27 20:34 PST, Lyon Chen
no flags
Lyon Chen
Comment 1 2013-02-27 20:34:11 PST
Created attachment 190640 [details] patch for 111032.
WebKit Review Bot
Comment 2 2013-02-28 07:16:32 PST
Comment on attachment 190640 [details] patch for 111032. Clearing flags on attachment: 190640 Committed r144307: <http://trac.webkit.org/changeset/144307>
WebKit Review Bot
Comment 3 2013-02-28 07:16:36 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.