[BlackBerry] User credentials are not correctly handled for non-browser usage https://bugs.webkit.org/show_bug.cgi?id=111032

Internal PR: 295181
Internal reviewed by Joe Mason.

Reviewed by Yong Li.

Use encrypted password as binary data when calling SQLiteStatement::bindBlob(), in
stead of using it as a normal WTF::String.

No new tests as this causes no expected behaviour change.

* platform/network/blackberry/CredentialBackingStore.cpp:
(WebCore::CredentialBackingStore::addLogin):
(WebCore::CredentialBackingStore::updateLogin):


Canonical link: https://commits.webkit.org/129393@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144307 268f45cc-cd09-0410-ab3c-d52691b4dbfc